--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,22 @@
 
 /* ==================== Nav Bar==================== */
 
-.nav-bar-items{
+#nav-bar-items{
     display: flex;
     justify-content: space-between;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-color: rgba(255, 255, 255, .3);
     position: fixed;
     top: 0;
     width: 100%;
+    transition: top 1s;
 }
 .name{
     font-family: Tahoma, sans-serif;
     font-size: 18pt;
     padding: 14px 10px;
 }
-.nav-bar-items a{
+#nav-bar-items a{
     display: block;
     color: black;
     text-align: center;
